      % Average.

      %% Move to 3.0.1 patched after a while:
      \item \code{switch(f, ...)} now warns when \code{f} is a factor,
      as this typically happens accidentally where the useR meant to
      pass a character, but \code{f} is treated as integer (as always
      documented).

      \item The parser has been modified to use less memory.
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item In the \file{DESCRIPTION} file, \preformatted{    License: X11}
      is no longer recognized as valid.  Use \sQuote{MIT} or
      \sQuote{BSD_2_clause} instead.

      \item For consistency, entries in \file{.Rinstignore} are now matched
      case-insensitively on all platforms.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item For consistency, \command{R CMD build} now matches entries
      in \file{.Rbuildignore}  and \file{vignettes/.install_extras}
      case-insensitively on all platforms (not just on Windows).

      \item \code{checkFF()} (called by \command{R CMD check} by
      default) can optionally check foreign function calls for
      consistency with the registered type and argument count.  This is
      the default for \command{R CMD check --as-cran} or can be enabled
      by setting environment variable \env{_R_CHECK_FF_CALLS_} to
      \samp{registration} (but is in any case suppressed by
      \option{--install=no}).   Because this checks calls in which
      \code{.NAME} is an \R object and not just a literal character
      string, some other problems are detected for such calls.

      Functions \code{suppressForeignCheck()} and \code{dontCheck()}
      have been added to allow package authors to suppress false
      positive reports.

      \item \code{R CMD check --as-cran} warns about a false value of the
      \file{DESCRIPTION} field \samp{BuildVignettes} for Open Source
      packages, and ignores it (as an Open Source package needs to have
      complete sources for its vignettes).
